<resources>
    <string name="app_name">TipCalc</string>
    <string name="Txv_hint_propina">Propina</string>
    <string name="Txv_hint_porcentaje">% de propina</string>
    <string name="Btn_incrementar">+</string>
    <string name="Btn_decrementar">-</string>
    <string name="Btn_calcular">calcular</string>
    <string name="Btn_borrar">Borrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
